<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context="com.randeep.myapp.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_apps"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/heading"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <Button
            style="@style/MyButton"
            android:layout_height="wrap_content"
            android:text="@string/button1_text"
            android:id="@+id/button1"/>

        <Button
            style="@style/MyButton"
            android:layout_height="wrap_content"
            android:text="@string/button2_text"
            android:id="@+id/button2"/>

        <Button
            style="@style/MyButton"
            android:layout_height="wrap_content"
            android:text="@string/button3_text"
            android:id="@+id/button3"/>

        <Button
            style="@style/MyButton"
            android:layout_height="wrap_content"
            android:text="@string/button4_text"
            android:id="@+id/button4"/>

        <Button
            style="@style/MyButton"
            android:layout_height="wrap_content"
            android:text="@string/button5_text"
            android:id="@+id/button5"/>

        <Button
            style="@style/MyButton"
            android:layout_height="wrap_content"
            android:text="@string/button6_text"
            android:id="@+id/button6"
            android:background="@color/dark_pink"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>
